versioned_docs/version-2025.2.5/professor/sergio_takahashi.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Sérgio Takahashi",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Metrologia - 1550",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_metrologia_b4",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Tecnologia dos Materiais - 343",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "sala_14-2",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Metrologia - 2590",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "",
          "students": [
            "TAI2026"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Metrologia - 108",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_metrologia_b4",
          "students": [
            "ELM2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Desenho Técnico - 1529",
          "size": 3,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "EIN2025 - Grupo A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Desenho Técnico e Metrologia - 2585",
          "size": 3,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "",
          "students": [
            "MEC2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Desenho Técnico - 1529",
          "size": 3,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "EIN2025 - Grupo B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Desenho Técnico - 132",
          "size": 4,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "",
          "students": [
            "ELM2026"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Desenho Assistido por computador - 340",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Tecnologia dos Materiais - 343",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "sala_14-2",
          "students": [
            "ELM2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Metrologia - 1550",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_metrologia_b4",
          "students": [
            "EIN2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Sérgio Takahashi

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>

